tests/errors/PlusEqualsCantAssignToObject.java
class PlusEqualsCantAssignToObject {
    public static void main(String[] args) {
	Object o = "hello";
	o += "bye";
    }
}
